[gd_scene load_steps=5 format=3 uid="uid://rbyd7i6snxjc"]

[ext_resource type="PackedScene" uid="uid://ubyatap3sylf" path="res://src/Tools/BaseDraw.tscn" id="1"]
[ext_resource type="Script" path="res://src/Tools/DesignTools/Shading.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://yjhp0ssng2mp" path="res://src/UI/Nodes/ValueSlider.tscn" id="3"]

[sub_resource type="ButtonGroup" id="ButtonGroup_lvcwb"]
resource_name = "rotate"
allow_unpress = true

[node name="ToolOptions" instance=ExtResource("1")]
script = ExtResource("2")

[node name="Rotate90" parent="RotationOptions/GridContainer/Rotate" index="0"]
button_group = SubResource("ButtonGroup_lvcwb")

[node name="Rotate180" parent="RotationOptions/GridContainer/Rotate" index="1"]
button_group = SubResource("ButtonGroup_lvcwb")

[node name="Rotate270" parent="RotationOptions/GridContainer/Rotate" index="2"]
button_group = SubResource("ButtonGroup_lvcwb")

[node name="LightenDarken" type="OptionButton" parent="." index="5"]
custom_minimum_size = Vector2(92, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
selected = 0
item_count = 2
popup/item_0/text = "Lighten"
popup/item_1/text = "Darken"
popup/item_1/id = 1

[node name="ShadingMode" type="OptionButton" parent="." index="6"]
layout_mode = 2
mouse_default_cursor_shape = 2
selected = 0
item_count = 3
popup/item_0/text = "Simple Shading"
popup/item_1/text = "Hue Shifting"
popup/item_1/id = 1
popup/item_2/text = "Color Replace"
popup/item_2/id = 2

[node name="AmountSlider" parent="." index="7" instance=ExtResource("3")]
layout_mode = 2
tooltip_text = "Lighten/Darken amount"
min_value = -100.0
value = 10.0
prefix = "Amount:"

[node name="HueShiftingOptions" type="VBoxContainer" parent="." index="8"]
visible = false
layout_mode = 2

[node name="HueSlider" parent="HueShiftingOptions" index="0" instance=ExtResource("3")]
layout_mode = 2
min_value = -180.0
max_value = 180.0
value = 10.0
prefix = "Hue:"

[node name="SatSlider" parent="HueShiftingOptions" index="1" instance=ExtResource("3")]
layout_mode = 2
min_value = -100.0
value = 10.0
prefix = "Saturation:"

[node name="ValueSlider" parent="HueShiftingOptions" index="2" instance=ExtResource("3")]
layout_mode = 2
min_value = -100.0
value = 10.0
prefix = "Value:"

[node name="ColorReplaceOptions" type="VBoxContainer" parent="." index="9"]
visible = false
layout_mode = 2

[node name="Settings" type="VBoxContainer" parent="ColorReplaceOptions" index="0"]
visible = false
layout_mode = 2

[node name="ColorsRight" parent="ColorReplaceOptions/Settings" index="0" instance=ExtResource("3")]
layout_mode = 2
max_value = 10.0
allow_greater = true
prefix = "Colors right"

[node name="HBoxContainer" type="HBoxContainer" parent="ColorReplaceOptions/Settings" index="1"]
layout_mode = 2

[node name="DarkenLabel" type="Label" parent="ColorReplaceOptions/Settings/HBoxContainer" index="0"]
layout_mode = 2
text = "Darken"

[node name="HSeparator" type="HSeparator" parent="ColorReplaceOptions/Settings/HBoxContainer" index="1"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LightenLabel" type="Label" parent="ColorReplaceOptions/Settings/HBoxContainer" index="2"]
layout_mode = 2
text = "Lighten"
horizontal_alignment = 2

[node name="Colors" type="HFlowContainer" parent="ColorReplaceOptions/Settings" index="2"]
layout_mode = 2

[node name="Label" type="Label" parent="ColorReplaceOptions" index="1"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
text = "Please select a color from the palette."
horizontal_alignment = 1
autowrap_mode = 3

[connection signal="item_selected" from="LightenDarken" to="." method="_on_LightenDarken_item_selected"]
[connection signal="item_selected" from="ShadingMode" to="." method="_on_ShadingMode_item_selected"]
[connection signal="value_changed" from="AmountSlider" to="." method="_on_LightenDarken_value_changed"]
[connection signal="value_changed" from="HueShiftingOptions/HueSlider" to="." method="_on_LightenDarken_hue_value_changed"]
[connection signal="value_changed" from="HueShiftingOptions/SatSlider" to="." method="_on_LightenDarken_sat_value_changed"]
[connection signal="value_changed" from="HueShiftingOptions/ValueSlider" to="." method="_on_LightenDarken_value_value_changed"]
[connection signal="value_changed" from="ColorReplaceOptions/Settings/ColorsRight" to="." method="_on_LightenDarken_colors_right_changed"]
